<resources>
    <string name="app_name">MotoRoutes</string>
    <string name="toolbar_routes">Routes</string>
    <string name="toolbar_addRoute">Add Route</string>
    <string name="toolbar_emergency">Emergency</string>
    <string name="banner_description">Find Your Route In Life</string>
    <string name="hint_login">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="tv_register">Sign Up</string>
    <string name="btn_register">Sign Up</string>
    <string name="tv_register_capital">SIGN UP</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="hint_fullName">Full name</string>
    <string name="hint_phoneNumber">Phone number</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="guest_login">Continue as a guest</string>
    <string name="Registartion_success">Registration success</string>
    <string name="toolbar_logout">Logout</string>
    <string name="routeAdded">Route added successfully</string>
    <string name="title_add_route">Add Route</string>
    <string name="hint_add_route_name">Route name</string>
    <string name="hint_add_route_description">Description</string>
    <string name="btn_addRoute">Add Route</string>
    <string name="et_filePath">File path</string>
    <string name="btn_chooseFile">Choose route file(.GPX)</string>
    <string name="btn_chooseImage">Choose Image Route</string>
    <string name="toolbar_home">Map</string>
    <string name="btn_show_route">Show on map</string>
    <string name="hint_Record">Record route</string>
    <string name="helper_required">*Required</string>
    <string name="fill_all">Please fill all fields</string>
    <string name="emergency_title">Emergency phones</string>
    <string name="my_location">My Location:</string>
    <string name="emergency_name1">Yedidim</string>
    <string name="emergency_details1">The organization provides non-medical first aid at no cost</string>
    <string name="emergency_phone1">1230</string>
    <string name="emergency_name2">Toffat teva</string>
    <string name="emergency_details2">Voluntary roads and off roads rescues 24/7</string>
    <string name="emergency_phone2">1700-707-609</string>
    <string name="emergency_name3">Evacuation by helicopter</string>
    <string name="emergency_details3">In medical emergency dial 101</string>
    <string name="emergency_phone3">03-6062264</string>
    <string name="hello">Hello</string>
    <string name="hello_guest">Hello Guest</string>
    <string name="hint_choose_area">Choose area</string>
    <string name="hint_choose_difficulty">choose difficulty</string>
    <string name="header_add_route">Route details</string>
    <string name="service_details">Recording new route in process</string>
    <string name="backgruond_permssion_prompt">In order to record route on background please approve background location permission</string>
    <string name="got_it">Got it!</string>
    <string name="err_add_route">Erorr! fill all fields</string>
    <string name="btn_record">Record</string>
    <string name="btn_stop_recording">Stop Recording</string>
    <string name="register_failed">"Registration Failed: "</string>
    <string name="login_failed">"Login Failed: "</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="permission_granted">Permission Granted!</string>
    <string name="error">"Error "</string>
    <string name="recording_started">Recording Started!</string>
    <string name="recording_stopped">Recording Stopped</string>
    <string name="btn_sort">Filter</string>
    <string name="btn_waze_route">Navigate</string>
    <string name="start">Start</string>
    <string name="end">End</string>

</resources>