<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:id="@+id/tv_register_banner"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/banner_description"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@id/tv_register_banner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_register_banner_description"
        />

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tv_register_banner_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:id="@+id/et_register_email"
        />

    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/et_register_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:id="@+id/et_register_password"
        />

    <Button
        android:layout_width="350dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/et_register_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/Light_Green_700"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/btn_register"
        android:id="@+id/btn_register"
        />



</androidx.constraintlayout.widget.ConstraintLayout>